--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ body,
   background-color: #000000aa;
   color: white;
   height: 100vh;
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar-track {
