--- a/src/views/Main/styles.scss
+++ b/src/views/Main/styles.scss
@@ -2,15 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100%;
   flex: 1;
   flex-direction: column;
   z-index: 999;
   position: absolute;
   width: 100%;
   backdrop-filter: blur(8px) brightness(0.5);
+  overflow: auto;
 
   .md-row {
+    margin-top: 32px;
     max-width: 1100px;
     display: flex;
     flex-direction: row;
@@ -21,6 +23,7 @@
 
   .forecasts {
     max-width: 1100px;
+    margin-bottom: 32px;
   }
 
   @media only screen and (max-width: 1150px) {
@@ -49,7 +52,7 @@
 
 .blur {
   z-index: 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-attachment: fixed;
